add intro and others

--- a/_bookdown.yml
+++ b/_bookdown.yml
@@ -2,7 +2,9 @@ book_filename: "R Intro Econometrics"
 chapter_name: "Chapter "  
 output_dir: "docs"   
 rmd_files:
+  - Introduction.Rmd
   - OLS.Rmd 
   - IV.Rmd
   - DC.Rmd
   - PANEL.Rmd
+  - Others.Rmd
